# CashflowMitKI

./: .dockerignore  .env.example  .gitignore  Begrüßungstext-YouTube.md  CLAUDE.md  Dockerfile  VSCode-Einrichtung-Checkliste.md  alembic.ini  branding.md  docker-compose.staging.yml  docker-compose.yml  hello.txt  prefect.yaml  pyproject.toml  requirements.txt  system_setup_mitki_ai.md
.bmad/: sprint-status.yaml
.claude/: settings.json  settings.local.json
app/: config.py  database.py  dependencies.py  main.py
docs/: architecture-subscription-manager-2026-03-27.md  bmm-workflow-status.yaml  implementation-plan.md  infrastructure.md  prd-cashflow-planner-2026-03-30.md  prd-coolify-deploy-2026-04-05.md  prd-subscription-manager-2026-03-27.md  sprint-plan-cashflow-2026-03-30.md  sprint-plan-subscription-manager-2026-03-29.md  vision.md
flows/: auto_renewal.py  deploy.py  monthly_report.py  renewal_reminder.py
migrations/: env.py
scripts/: seed.py  seed_cashflow.py
tests/: conftest.py  test_accounts.py  test_alembic.py  test_analytics.py  test_audit_log.py  test_auth_api.py  test_bank_import.py  test_bookings.py  test_budget_alerts.py  test_cashflow_calendar.py  test_cashflow_dashboard.py  test_cashflow_onboarding.py  test_cashflow_report.py  test_cashflow_service.py  test_cashflow_snapshots.py  test_cashflow_widgets.py  test_categories.py  test_chat_crud.py  test_chat_tools.py  test_coupons.py  test_custom_fields.py  test_dark_mode.py  test_dashboard.py  test_dashboard_widgets.py  test_direct_debits.py  test_email_service.py  test_fuzzy_matching.py  test_graphql.py  (+39 more)
(+155 files in other folders)
