[project]
name = "subscription-manager"
version = "0.1.0"
description = "Multi-Tenant SaaS Subscription Manager by mitKI.ai"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501", "N806", "N802"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["app/models/__init__.py", "scripts/*"]
